# deepin-manual

./: .clog.toml  .gitignore  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.20  CMakeLists.txt.user.4.8-pre1  ChangeLog.txt  INTRODUCTION.md  Makefile  Makefile.old  README.md  README.zh_CN.md  REUSE.toml  deepin-user-manual.desktop  ggy.txt  linglong.yaml  main.js  org.deepin.manual.install  package.json  search.db
.obs/: workflows.yml
src/: CMakeLists.txt  button.py  color.py  constant.py  draw.py  environments.h.in  index.html  main.py  nls.py  parse_content.py  titlebar.py  utils.py  webview.py  window.py
src/app/: dman.cpp  dman.sh  dman_helper.cpp  dman_search.cpp  generate_search_db.cpp  image_viewer_demo.cpp  manual_translate.cpp  search_demo.cpp  stop_dman_search.sh  update_search_db.cpp
src/base/: accessible.h  command.cpp  command.h  consts.cpp  consts.cpp.in  consts.h  ddlog.h  eventlogutils.cpp  eventlogutils.h  file_util.cpp  file_util.h  logger.cpp  logger.h  sysinfo.cpp  sysinfo.h  utils.cpp  utils.h
src/configs/dbus/: FilesUpdateAdaptor.cpp  FilesUpdateAdaptor.h  Launcher1Adaptor.cpp  Launcher1Adaptor.h  LauncherAdaptor.cpp  LauncherAdaptor.h  OpenAdaptor.cpp  OpenAdaptor.h  SearchAdaptor.cpp  SearchAdaptor.h
src/controller/: argument_parser.cpp  argument_parser.h  config_manager.cpp  config_manager.h  dman-helper.service  filewatcher.cpp  filewatcher.h  helpermanager.cpp  helpermanager.h  search_db.cpp  search_db.h  search_manager.cpp  search_manager.h  search_manager.h.autosave  search_result.h  shellobj.cpp  shellobj.h  window_manager.cpp  window_manager.h  windowmanager.cpp  windowmanager.h
src/dbus/: CMakeLists.txt  com.deepin.Manual.FilesUpdate.xml  com.deepin.Manual.Open.service  com.deepin.Manual.Open.xml  com.deepin.Manual.Search.service  com.deepin.Manual.Search.service.in  com.deepin.Manual.Search.xml  com.deepin.dde.daemon.Launcher.xml  dbus_consts.cpp  dbus_consts.h  dmanwatcher.cpp  dmanwatcher.h  generate-iface.sh  launcher_interface.cpp  launcher_interface.h  manual_filesupdate_adapter.cpp  manual_filesupdate_adapter.h  manual_filesupdate_proxy.cpp  manual_filesupdate_proxy.h  manual_open_adapter.cpp  manual_open_adapter.h  manual_open_interface.cpp  manual_open_interface.h  manual_open_proxy.cpp  manual_open_proxy.h  manual_search_adapter.cpp  manual_search_adapter.h  manual_search_object.cpp  manual_search_object.h  manual_search_proxy.cpp  manual_search_proxy.h  org.deepin.dde.daemon.Launcher1.xml
src/dbus/dbusvariant/: app_info.cpp  app_info.h
src/dman_qtest/: report.sh  test_main.cpp
src/dman_qtest/base/: ut_command_test.cpp  ut_consts_test.cpp  ut_utils_test.cpp  ut_utils_test.h
src/dman_qtest/controller/: ut_argument_parser_test.cpp  ut_config_manager_test.cpp  ut_search_db_test.cpp  ut_search_manager_test.cpp  ut_window_manager_test.cpp
src/dman_qtest/dbus/: ut_lanuncher_interface_test.cpp
src/dman_qtest/view/: ut_image_viewer_proxy_test.cpp  ut_manual_proxy_test.cpp  ut_manual_proxy_test.h  ut_search_proxy_test.cpp  ut_search_proxy_test.h  ut_settings_proxy_test.cpp  ut_theme_proxy_test.cpp  ut_web_window_test.cpp  ut_web_window_test.h
src/dummy-images/: Thumbs.db  jquery.orbit-1.2.3.min.js  orbit-1.2.3.css
src/html/: home.html  index.html
src/html/css/: home.css  orbit-1.2.3.css
src/html/images/: Thumbs.db
src/html/js/: jquery.orbit-1.2.3.min.js
src/resources/: CMakeLists.txt  deepin-manual.desktop  dman.desktop  libdxcb  org.deepin.manual.metainfo.xml
src/resources/images/: images.cpp  images.qrc
src/resources/themes/: images.cpp  images.h  themes.qrc
src/translations/: deepin-manual.ts  deepin-manual_am_ET.ts  deepin-manual_bg.ts  deepin-manual_bn.ts  deepin-manual_cs.ts  deepin-manual_de.ts  deepin-manual_el.ts  deepin-manual_es.ts  deepin-manual_gl_ES.ts  deepin-manual_ja.ts  deepin-manual_ko.ts  deepin-manual_lt.ts  deepin-manual_ms.ts  deepin-manual_pl.ts  deepin-manual_pl_PL.ts  deepin-manual_pt.ts  deepin-manual_ru.ts  deepin-manual_sr.ts  deepin-manual_tr.ts  deepin-manual_ug.ts  deepin-manual_uk.ts  deepin-manual_zh_CN.ts  deepin-manual_zh_TW.ts  update_ts.py
src/translations/desktop/: desktop_bg.ts  desktop_bn.ts  desktop_ca.ts  desktop_cs.ts  desktop_de_DE.ts  desktop_es.ts  desktop_fi.ts  desktop_it.ts  desktop_ja.ts  desktop_ko.ts  desktop_pl.ts  desktop_pl_PL.ts  desktop_ru.ts  desktop_sl.ts  desktop_sr.ts  desktop_tr.ts  desktop_uk.ts  desktop_zh_CN.ts  desktop_zh_TW.ts
src/view/: i18n_proxy.cpp  i18n_proxy.h  image_viewer_proxy.cpp  image_viewer_proxy.h  jscontext.cpp  jscontext.h  manual_proxy.cpp  manual_proxy.h  search_proxy.cpp  search_proxy.h  settings_proxy.cpp  settings_proxy.h  theme_manager.cpp  theme_manager.h  theme_proxy.cpp  theme_proxy.h  title_bar_proxy.cpp  title_bar_proxy.h  web_event_delegate.cpp  web_event_delegate.h  web_window.cpp  web_window.h  web_window.h.autosave
src/view/widget/: image_viewer.cpp  image_viewer.h  manual_webview.cpp  manual_webview.h  search_button.cpp  search_button.h  search_completion_delegate.cpp  search_completion_delegate.h  search_completion_listview.cpp  search_completion_listview.h  search_completion_window.cpp  search_completion_window.h  search_edit.cpp  search_edit.h  title_bar.cpp  title_bar.h  web_page.cpp  web_page.h  web_view.cpp  web_view.h
src/web/: .gitignore  CMakeLists.txt  gulpfile.js  index.html  package-lock.json  package.json  toHtml.js  toSearchIndex.js
src/web/js/: App.js  app.js  article.jsx  content.jsx  en_US.js  index.jsx  main.jsx  mdToHtml.js  nav.jsx  scrollbar.jsx  search.jsx  searchIndex.js  zh_CN.js
src/web/sass/: app.scss  article.scss  content.scss  index.scss  main.scss  nav.scss  read.scss  search.scss
src/web/scss/: content.scss  nav.scss
src/web/toManual/: gulpfile.js  index.html  package-lock.json  package.json
src/web/toSearchMd/: package-lock.json  package.json  webpack.config.js
src/web_dist/: .index.css.swo  .index.css.swp  index.css  index.html  index.js
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: test_main.cpp
(+1347 files in other folders)
